--- a/modules/css/ecosystem-cards.scss
+++ b/modules/css/ecosystem-cards.scss
@@ -28,6 +28,7 @@
 
 .card-tooltip {
   display: flex;
+  flex-wrap: wrap;
   --hutanFlowerCardScale: 0.7;
   --hutanEcosystemCardScale: 0.7;
 
